# qrcode

./: CMakeLists.txt  Readme.markdown  qrcodegen-demo.c  qrcodegen.c  qrcodegen.h  readme.md
test/: CMakeLists.txt  main.c
